--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
     tools:context=".MainActivity">
 
     <include
@@ -34,17 +35,20 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/info_gray"
-                    android:focusable="true"
+                    android:layout_width="380dp"
+                    android:layout_height="480dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/round_corners"
+                    android:backgroundTint="@color/info_gray"
+                    android:elevation="8dp"
                     android:focusableInTouchMode="true"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:padding="16dp"
                         android:text="Username"
                         android:textColor="@color/black"
                         android:textSize="24dp"
@@ -60,7 +64,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:padding="16dp"
                         android:text="Password"
                         android:textColor="@color/black"
                         android:textSize="24dp"
@@ -77,7 +81,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
+                        android:layout_margin="16dp"
                         android:background="@drawable/round_corners"
                         android:backgroundTint="@color/colorPrimaryDark"
                         android:text="Login"
@@ -89,21 +93,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
+                        android:layout_margin="16dp"
                         android:background="@drawable/round_corners"
                         android:backgroundTint="@color/colorPrimaryDark"
-                        android:text="click here to enrroll online"
+                        android:text="click here to enroll online"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:clickable="true"
-                        android:padding="20dp"
-                        android:text="Forgot Username or Password?  Click here"
+                        android:text="Forgot Username or Password?  \nClick here"
+                        android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
 
